# ha-huff-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
ha_huff_proxy/: common.py  config.py  logger.py  main.py
ha_huff_proxy/api/: proxy.py  upload.py
ha_huff_proxy/static/: simple.min.css
ha_huff_proxy/templates/: index.html
